# OmniAi

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
apps/local-bridge/: pyproject.toml
apps/local-bridge/ai_context_bridge_local_bridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/local-bridge/bridge/: __init__.py  main.py  models.py  store.py
apps/local-bridge/bridge/analysis/: __init__.py  models.py  python_analyzer.py
apps/local-bridge/tests/: test_analyze_api.py  test_api.py  test_python_analyzer.py
docs/: ContextSchema.md  ContextSelection.md  DependencyGraph.md  ExtensionGuide.md  Performance.md  architecture.md  intelligence.md  roadmap.md
docs/adr/: 0001-monorepo-with-npm-workspaces.md  0002-local-fastapi-bridge.md  0003-feature-flags.md  0004-plain-js-browser-extension.md  0005-analysis-in-bridge.md
docs/architecture/: ADR-0001-project-architecture.md  ADR-0002-context-engine.md  ADR-0003-browser-orchestrator.md  ADR-0004-workflow-engine.md  ADR-0005-event-bus.md  ADR-0006-provider-capabilities.md  ADR-0007-browser-session.md  ADR-0008-prompt-template-system.md  README.md
